# ray-tracer

./: .gitignore  CMakeLists.txt  README.md
examples/: main.cpp
include/: bounding_box.h  bvh_node.h  material.h  msaa.h  primitive.h  ray_tracing_engine.h  scene.h  sphere.h  tinted.h  triangle.h
src/: bounding_box.cpp  canvas.cpp  material.cpp  primitive.cpp  random.h  ray_tracing_engine.cpp  scene.cpp  sphere.cpp  tinted.cpp  triangle.cpp  utility.h
